--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ canvas{ padding: 0; margin: auto; display: block; width:100%;}
 #game {margin:50px;}
 	</style>
  	<script type="text/javascript" src="js/template.js"></script>       
-	 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+	 <script src="js/sweet.js"></script>
 	 <!-- Font -->
 	 <link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,10 +22,9 @@ canvas{ padding: 0; margin: auto; display: block; width:100%;}
 		.swal2-modal {
 			border: 3px solid white;
 			background: url(assets/papanscore.png);
-			background-size: cover;
-			
+			background-size:cover ;
 			border: none;
-			width: 50%;
+			width: 56%;
 			height: 56%;
 
 		  }
@@ -39,7 +38,7 @@ canvas{ padding: 0; margin: auto; display: block; width:100%;}
 			font-style: normal;
 			font-weight: normal;
 			position: relative;
-			top: 20%;
+			top: 30%;
 			left: 10%;
 			font-family: VT323;
 			color: white;
@@ -56,13 +55,16 @@ canvas{ padding: 0; margin: auto; display: block; width:100%;}
             border-style: solid;
           }
 		  
+			
+		  	
 	</style>
 </head>
 <body>
-<div id="game">
-	<div style="margin-left:7%;" id="gameArea"><canvas id="canvas"></canvas></div>
 
+	<div id="game">
+	<div style="margin-left:7%;" id="gameArea"><canvas id="canvas"></canvas></div>
 </div>
+
 
 
 
@@ -72,8 +74,6 @@ canvas{ padding: 0; margin: auto; display: block; width:100%;}
 <script type="text/javascript" src="map/map_2.js"></script>
 <script type="text/javascript" src="map/map_3.js"></script>
 <script>
-	function swa(){
-		
-	}
+
 </script>
 </html>
