update(musil,raja)

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
     <meta charset="UTF-8">
-	<title>PinkAdventure</title>
+	<title>KemalBros</title>
     <style>
 html,body { margin: 0;overflow: hidden;}
 canvas{ padding: 0; margin: auto; display: block; width:100%;}
 #gameArea {width:80%; position:absolute;}
 #game {margin:50px;}
 	</style>
- 	<script type="text/javascript" src="js/template.js"></script>       
+ 	<script type="text/javascript" src="js/function.js"></script>       
 	 <script src="js/sweet.js"></script>
 	 <!-- Font -->
 	 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,11 +21,12 @@ canvas{ padding: 0; margin: auto; display: block; width:100%;}
 	<style>
 		.swal2-modal {
 			border: 3px solid white;
-			background: url(assets/papanscore.png);
+			background: url(assets/1.png);
 			background-size:cover ;
 			border: none;
 			width: 56%;
 			height: 56%;
+			
 
 		  }
 		  .swal2-overlay {
@@ -39,7 +40,7 @@ canvas{ padding: 0; margin: auto; display: block; width:100%;}
 			font-weight: normal;
 			position: relative;
 			top: 30%;
-			left: 10%;
+			right: 6%;
 			font-family: VT323;
 			color: white;
 		  }
@@ -64,6 +65,7 @@ canvas{ padding: 0; margin: auto; display: block; width:100%;}
 	<div id="game">
 	<div style="margin-left:7%;" id="gameArea"><canvas id="canvas"></canvas></div>
 </div>
+
 
 
 
